feat: módulo Feedlot v1/v1.5, campaña transversal y mejoras de estados cultivos
Implementa el módulo feedlot completo (backend, frontend, migraciones V1_153-V1_154, tests y scripts demo), la campaña transversal en todos los rubros, el motor unificado de estados de lotes en cultivos y las specs técnicas asociadas.

Co-authored-by: Cursor <cursoragent@cursor.com>